<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="invitation_deep_link" tools:ignore="MissingTranslation">"https://sn3d4.app.goo.gl/TSLetter"</string>

    <string name="ad_app_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375~4800196150"</string>
    <string name="banner_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/1961731088"</string>
    <string name="interstitial_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/4365985844"</string>
    <string name="reward_ad_id" tools:ignore="MissingTranslation">"ca-app-pub-9788292917303375/1235591327"</string>


    <string name="notification_channel_id" tools:ignore="MissingTranslation">"notification_channel_id_ts_letter"</string>
    <string name="notification_channel_name" tools:ignore="MissingTranslation">"notification_channel_name_ts_letter"</string>

    <string name="app_name">Letter to me</string>

    <string name="start">"Start"</string>
    <string name="setting">"Setting"</string>
    <string name="save">"Save"</string>
    <string name="write">"Write"</string>
    <string name="date">"Date"</string>
    <string name="title">"Title"</string>
    <string name="basics">"Basics"</string>
    <string name="content">"Content"</string>
    <string name="cancel">"Cancel"</string>
    <string name="letter">"Letter"</string>
    <string name="delete">"Delete"</string>
    <string name="preview">"Preview"</string>
    <string name="invite">"Invite"</string>
    <string name="font">"font"</string>

    <string name="nanum_pen">"Nanum Pen"</string>
    <string name="inklipquid">"Inklipquid"</string>

    <string name="add_review">"Add Review"</string>
    <string name="empty_title">"Get Started"</string>
    <string name="edit_image">"Edit Image"</string>
    <string name="version_information">"Version Information"</string>
    <string name="service_center">"Service center"</string>
    <string name="contact_us">"Contact us"</string>

    <string name="date_to_receive">"Date to receive"</string>

    <string name="empty_letter_content">"Please write me a letter.\nPretty cards are registered."</string>

    <!--hint-->
    <string name="hint_date">"Please select a date to receive the letter."</string>
    <string name="hint_title">"Please enter the title."</string>
    <string name="hint_content">"Please enter the content."</string>
    <string name="hint_unpublished">"This is an\nunreleased letter."</string>

    <!--message-->
    <string name="message_save_write">"If you save it, you can not edit it. Do you want to save it?"</string>
    <string name="message_delete_write">"Are you sure you want to delete this letter?"</string>


    <!--error-->
    <string name="error_receivedate">"Please set the date to receive the letter."</string>
    <string name="error_title">"Please enter the title."</string>
    <string name="error_email">"There are no email applications installed."</string>

    <string name="shared_title">Invite</string>
    <string name="shared_message">I recommend App to you! :)</string>
    <string name="shared_call_to_action_text">Install!</string>

    <string name="contact_email">"sky877kr@gmail.com"</string>
    <string name="arrived_letter_title">The letter that I wrote arrived.</string>
    <string name="arrived_letter_content">Touch to read the letter..</string>
    <string name="alarm">Alarm</string>

</resources>
