<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="WriteHeaderItemBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.tsletter.viewmodel.write.WriteHeaderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <TextView
            style="@style/SubTitle"
            android:layout_marginTop="16dp"
            android:text="@string/basics" />
        <!--날짜-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/date"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="end"
                android:hint="@string/hint_date"
                android:padding="16dp" />
        </LinearLayout>
        <!--제목-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="end"
                android:hint="@string/hint_title"
                android:padding="16dp" />
        </LinearLayout>

        <View style="@style/lineView" />

        <TextView
            style="@style/SubTitle"
            android:layout_marginTop="16dp"
            android:text="@string/content" />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/hint_content"
            android:padding="16dp" />
    </LinearLayout>
</layout>