<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="MainViewBinding">

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.yts.tsletter.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:animateLayoutChanges="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/background"
                    app:cardElevation="8dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintHeight_percent="0.6">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/animationView"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:onClick="@{(v)->model.startLottieAnimation(v)}"
                            app:lottie_fileName="pencil_write.json" />

                        <View
                            style="@style/lineView"
                            android:layout_marginBottom="8dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/background"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/empty_title"
                                android:textColor="@color/textColor"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/empty_letter_content"
                                android:textColor="@color/textColor"
                                android:textSize="12sp" />

                            <com.google.android.material.button.MaterialButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:onClick="@{(v)->model.startWriteActivity(v)}"
                                android:tag="trans"
                                android:text="@string/start"
                                android:textColor="@color/textWhiteColor"
                                android:textSize="12sp"
                                app:backgroundTint="@color/colorAccent"
                                app:cornerRadius="4dp" />
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottom_app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:backgroundTint="@color/colorPrimary"
                app:hideOnScroll="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_floating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)->model.startWriteActivity(v)}"
                android:tint="@color/tintColor"
                app:layout_anchor="@+id/bottom_app_bar"
                app:srcCompat="@drawable/ic_create_black_24dp" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </LinearLayout>
</layout>